Redesigned background and fixed UI overflow

--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -1,8 +1,7 @@
 body {
     width: 400px;
-    height: 400px;
-    background-color: lightgray;
-    border: 1px solid;
+    height: auto;
+    background-image: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(0,212,255,1) 100%);
     margin: 0;
     padding: 10px;
     font-size: 16px;
